--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -15,3 +15,12 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 730px) {
+  .text1 {
+    font-size: 2rem;
+  }
+  .text2 {
+    font-size: 1.2rem;
+  }
+}
